k8s/ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: tinyfilemanager-tekton-ui
  name: tinyfilemanager-tekton-ui
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: tinyfilemanager-tekton-svc
    weight: 100
